--- a/css/style.css
+++ b/css/style.css
@@ -528,7 +528,7 @@ footer{
     .nav-container{
         top: 0;
         position: fixed;
-        width: 100%;
+        width: 450px;
         z-index: 100;
     }
     .nav-container p{
